# nasup-guidebook

./: Cargo.toml  README.md  flake.nix  notes.md
src/: config.rs  fetch_guidebook.rs  fetch_sheet.rs  guidebook.rs  main.rs  nasup.rs  nasup_to_guidebook.rs  parse_nasup.rs  reconcile_guidebook_locations.rs  reconcile_guidebook_presenters.rs  reconcile_guidebook_sessions.rs  reconcile_guidebook_strands.rs  state.rs  synchronize_links.rs  synth_nasup.rs
src/fetch_guidebook/: model.rs
src/guidebook/: model.rs
src/nasup/: model.rs
src/parse_nasup/: parse_model.rs  parse_presenter_institutions.rs  parse_sessions.rs  parse_strands.rs
